chore(DEV-1): Se realizan correccciones en los archivos para eliminar el code smell resultado del analisis de SonarQube